--- a/buszy/art.html
+++ b/buszy/art.html
@@ -305,7 +305,7 @@
         <nav aria-label="breadcrumb" style="margin-bottom:0;">
             <ol class="breadcrumb breadcrumb-fixed" id="floating-breadcrumb">
                 <li class="breadcrumb-item">
-                    <a href="nbs.html"><i class="fa-solid fa-location-pin"></i>
+                    <a href="nbs.html"><i class="fa-solid fa-location-dot"></i>
                     </a>
                 </li>
                 <li class="breadcrumb-item">
@@ -404,7 +404,7 @@
                         <nav aria-label="breadcrumb" class="breadcrumb-desktop" style="display:none;">
                             <ol class="breadcrumb">
                                 <li class="breadcrumb-item">
-                                    <a href="nbs.html"><i class="fa-solid fa-location-pin"></i>
+                                    <a href="nbs.html"><i class="fa-solid fa-location-dot"></i>
                                     </a>
                                 </li>
                                 <li class="breadcrumb-item">
@@ -435,97 +435,7 @@
         </div>
     </section>
 
-
-    <!-- Title/Breadcrumbs -->
-    <!-- <section class="about-me-sum clearfix">
-        <div class="wbnrfz_eicw">
-            <div class="page-header-section">
-                <div class="container container-xxl container-mobile container-mobile-header">
-                    <div class="breadcrumb-wrapper">
-                        <nav aria-label="breadcrumb">
-                            <ol class="breadcrumb">
-                                <li class="breadcrumb-item">
-                                    <a href="../index.html">
-                                        <i class="fa-solid fa-house"></i>
-                                    </a>
-                                </li>
-                                <li class="breadcrumb-item">
-                                    <a href="../buszy.html">Buszy</a>
-                                </li>
-                            </ol>
-                        </nav>
-                        <div class="page-title-wrapper">
-                            <div
-                                style="display: flex; justify-content: space-between; align-items: center; flex-wrap: wrap;">
-                                <div>
-                                    <h1 class="page-title" id="filter-title">Arrival Timings</h1>
-                                </div>
-                                <div style="position: relative; max-width: 400px; margin-top: 5px; display: none;">
-                                    <i class="fa-solid fa-search"
-                                        style="position: absolute; left: 12px; top: 50%; transform: translateY(-50%); color: #cccccc; z-index: 1;"></i>
-                                    <input type="text" id="bus-stop-search" class="form-control"
-                                        placeholder=" Search Bus Stop Code" style="padding-left: 35px; width: 100%;">
-                                </div>
-
-                            </div>
-                        </div>
-                    </div>
-
-                </div>
-
-
-                <div class="scrollable-tabs-container">
-                    <div class="left-arrow">
-                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                            stroke="currentColor" class="size-6">
-                            <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 19.5 8.25 12l7.5-7.5" />
-                        </svg>
-                    </div>
-
-                    <ul id="scrollable-tabs">
-                        <li>
-                            <a href="../buszy.html#pinned"><i class="fa-sharp fa-solid fa-thumbtack-angle"
-                                    title="Pinned"></i>
-                                Pinned</a>
-                        </li>
-
-                        <li>
-                            <a href="nbs.html"><i class="fa-solid fa-location-dot" title="Nearby"></i>
-                                Nearby</a>
-                        </li>
-
-                        <li>
-                            <a href="abs.html"><i class="fa-solid fa-magnifying-glass" title="Search"></i>
-                                Search </a>
-                        </li>
-
-                        <li>
-                            <a href="ann.html"><i class="fa-solid fa-bullhorn" title="Announcements"></i>
-                                Announcements </a>
-                        </li>
-
-                        <li>
-                            <a href="settings.html"><i class="fa-solid fa-gear" title="Settings"></i>
-                                Settings </a>
-                        </li>
-                    </ul>
-
-                    <div class="right-arrow active">
-                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                            stroke="currentColor" class="size-6">
-                            <path stroke-linecap="round" stroke-linejoin="round" d="m8.25 4.5 7.5 7.5-7.5 7.5" />
-                        </svg>
-
-                    </div>
-                </div>
-                <hr>
-            </div>
-
-        </div>
-
-    </section> -->
-
-    <!-- Add a container for the map -->
+    <!-- Container for the map -->
     <section class="bus-location-section">
         <div class="container">
             <button id="collapse-map-btn" class="btn btn-busloc btn-sm" title="Collapse Map">
