--- a/buszy/menu.html
+++ b/buszy/menu.html
@@ -131,18 +131,10 @@
                         <span>Menu</span>
                     </a>
                 </li>
-                <!-- <li class="nav-item-toggle">
-                    <a href="#" class="nav-link-toggle" id="dark-mode-toggle-desktop" title="Toggle Dark/Light Mode!">
-                        <i class="fa-solid fa-moon-stars" id="theme-icon-desktop"></i>
-                    </a>
-                </li> -->
             </ul>
         </div>
 
     </nav>
-
-
-
 
     <!-- Mobile Bottom Navigation Bar -->
     <nav class="mobile-bottom-nav">
@@ -230,7 +222,7 @@
                 <a href="ann.html" class="list-group-item list-group-item-action flex-column align-items-start">
                     <div class="d-flex">
                         <div>
-                            <h5 class="lg-ann"><i class="fa-solid fa-bullhorn"></i> Announcements</h5>
+                            <h5 class="lg-menu"><i class="fa-solid fa-bullhorn"></i> Announcements</h5>
                         </div>
                     </div>
                 </a>
@@ -238,7 +230,7 @@
                 <a href="settings.html" class="list-group-item list-group-item-action flex-column align-items-start">
                     <div class="d-flex">
                         <div>
-                            <h5 class="lg-ann"><i class="fa-solid fa-gear"></i> Settings</h5>
+                            <h5 class="lg-menu"><i class="fa-solid fa-gear"></i> Settings</h5>
                         </div>
                     </div>
                 </a>
@@ -247,7 +239,7 @@
                     id="dark-mode-toggle-desktop">
                     <div class="d-flex">
                         <div>
-                            <h5 class="lg-ann"><i class="fa-solid fa-sun-bright"></i> Display: Light</h5>
+                            <h5 class="lg-menu"><i class="fa-solid fa-sun-bright"></i> Display: Light</h5>
                         </div>
                     </div>
                 </a>
@@ -255,8 +247,7 @@
             <hr>
 
             <div style="text-align: center; color: gray; font-size: 14px; margin-top: 1em; margin-bottom: 2em;">
-                Version 3.0.0-DEV
-
+                Version 3.0.0
             </div>
     </section>
 
