--- a/buszy/abs.html
+++ b/buszy/abs.html
@@ -149,7 +149,7 @@
             <!-- Navigation Links -->
             <ul class="navbar-nav" id="navbarNav">
                 <li class="nav-item">
-                    <a href="pinned.html" class="nav-link">
+                    <a href="../buszy.html" class="nav-link">
                         <i class="fa-sharp fa-solid fa-thumbtack-angle"></i>
                         <span>Pinned</span>
                     </a>
@@ -161,13 +161,13 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="abs.html" class="nav-link">
+                    <a href="abs.html" class="nav-link active">
                         <i class="fa-solid fa-magnifying-glass"></i>
                         <span>Search</span>
                     </a>
                 </li>
                 <li class="nav-item ">
-                    <a href="menu.html" class="nav-link active">
+                    <a href="menu.html" class="nav-link">
                         <i class="fa-solid fa-bars"></i>
                         <span>Menu</span>
                     </a>
