--- a/buszy/nbs.html
+++ b/buszy/nbs.html
@@ -206,13 +206,13 @@
             <!-- Navigation Links -->
             <ul class="navbar-nav" id="navbarNav">
                 <li class="nav-item">
-                    <a href="pinned.html" class="nav-link">
+                    <a href="../buszy.html" class="nav-link">
                         <i class="fa-sharp fa-solid fa-thumbtack-angle"></i>
                         <span>Pinned</span>
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="nbs.html" class="nav-link">
+                    <a href="nbs.html" class="nav-link active">
                         <i class="fa-solid fa-location-dot"></i>
                         <span>Nearby</span>
                     </a>
@@ -224,7 +224,7 @@
                     </a>
                 </li>
                 <li class="nav-item ">
-                    <a href="menu.html" class="nav-link active">
+                    <a href="menu.html" class="nav-link">
                         <i class="fa-solid fa-bars"></i>
                         <span>Menu</span>
                     </a>
@@ -246,7 +246,7 @@
                 </a>
             </li>
             <li class="active">
-                <a href="nbs.html">
+                <a href="#">
                     <span class="icon">
                         <i class="fa-solid fa-location-dot"></i>
                     </span>
@@ -290,7 +290,7 @@
                                     </a>
                                 </li>
                                 <li class="breadcrumb-item">
-                                    <a href="menu.html"><i class="fa-solid fa-bars"></i>
+                                    <a href="menu.html"><i class="fa-solid fa-location-dot"></i>
                                     </a>
                                 </li>
                             </ol>
