2026-02 Feature Update for Buszy V3

--- a/buszy/abs.html
+++ b/buszy/abs.html
@@ -109,6 +109,12 @@
         body.dark-mode .bus-stop-description {
             margin-left: 0px;
             margin-top: 5px;
+            font-size: 17px;
+        }
+
+        .bus-stop-code-text,
+        body.dark-mode .bus-stop-code-text {
+            font-size: 16px;
         }
     }
 
