--- a/buszy/menu.html
+++ b/buszy/menu.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="google-site-verification" content="57TuruPNu5wqSSia_cUehl5t9Gh1AbxrHNPcMiFx-aQ" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Announcements | Buszy</title>
+    <title>Menu | Buszy</title>
     <meta content="" name="description">
     <meta content="" name="keywords">
     <meta property="og:image" content="https://i.imgur.com/i8n9KYs.png" />
@@ -59,6 +59,11 @@
         box-shadow: none;
     }
 
+    .list-group-item {
+    padding-top: 1em;
+    padding-bottom: 1em;
+}
+
     body.dark-mode .breadcrumb.breadcrumb-fixed {
         background: none;
         backdrop-filter: none;
@@ -108,7 +113,7 @@
             <!-- Navigation Links -->
             <ul class="navbar-nav" id="navbarNav">
                 <li class="nav-item">
-                    <a href="pinned.html" class="nav-link">
+                    <a href="../buszy.html" class="nav-link">
                         <i class="fa-sharp fa-solid fa-thumbtack-angle"></i>
                         <span>Pinned</span>
                     </a>
