2026-02 Feature Update for Buszy V3

--- a/buszy.html
+++ b/buszy.html
@@ -117,12 +117,17 @@
         }
 
         .pinned h2 {
-            font-size: 30px;
-            margin-top: 1em;
+            font-size: 25px;
+            margin-top: 1.5em;
             margin-bottom: 0.5em;
             font-weight: bolder;
             color: #3b3b3b;
             text-align: center;
+        }
+
+        .bus-stop-code-text,
+        body.dark-mode .bus-stop-code-text {
+            font-size: 17px;
         }
     }
 </style>
