--- a/buszy/menu.html
+++ b/buszy/menu.html
@@ -60,9 +60,9 @@
     }
 
     .list-group-item {
-    padding-top: 1em;
-    padding-bottom: 1em;
-}
+        padding-top: 1em;
+        padding-bottom: 1em;
+    }
 
     body.dark-mode .breadcrumb.breadcrumb-fixed {
         background: none;
@@ -174,6 +174,14 @@
                         <i class="fa-solid fa-bars"></i>
                     </span>
                     <span class="label">Menu</span>
+                </a>
+            </li>
+            <li>
+                <a href="poc-tsa.html">
+                    <span class="icon">
+                        <i class="fa-solid fa-bars"></i>
+                    </span>
+                    <span class="label">Train Service Updates (BETA)</span>
                 </a>
             </li>
         </ul>
