2026-03 Cumulative Update for Buszy V3

--- a/buszy/menu.html
+++ b/buszy/menu.html
@@ -176,14 +176,6 @@
                     <span class="label">Menu</span>
                 </a>
             </li>
-            <li>
-                <a href="poc-tsa.html">
-                    <span class="icon">
-                        <i class="fa-solid fa-bars"></i>
-                    </span>
-                    <span class="label">Train Service Updates (BETA)</span>
-                </a>
-            </li>
         </ul>
     </nav>
 
@@ -236,6 +228,14 @@
                     <div class="d-flex">
                         <div>
                             <h5 class="lg-menu"><i class="fa-solid fa-bullhorn"></i> Announcements</h5>
+                        </div>
+                    </div>
+                </a>
+
+                <a href="tsa.html" class="list-group-item list-group-item-action flex-column align-items-start">
+                    <div class="d-flex">
+                        <div>
+                            <h5 class="lg-menu"><i class="fa-solid fa-train"></i> Train Service Updates (BETA)</h5>
                         </div>
                     </div>
                 </a>
