--- a/buszy/tsa.html
+++ b/buszy/tsa.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="google-site-verification" content="57TuruPNu5wqSSia_cUehl5t9Gh1AbxrHNPcMiFx-aQ" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Arrival Timings | Buszy</title>
+    <title>Train Service Updates | Buszy</title>
     <meta content="" name="description">
     <meta content="" name="keywords">
     <meta property="og:image" content="https://i.imgur.com/i8n9KYs.png" />
@@ -38,13 +38,6 @@
 </head>
 
 <style>
-    /* .tsu {
-        max-width: 100%;
-        margin: 0 auto;
-        padding: 24px;
-        padding-left: 6em;
-        padding-right: 6em;
-    } */
     .custom-list-item {
         display: flex;
         align-items: center;
@@ -86,6 +79,34 @@
         align-items: center;
         justify-content: center;
         font-size: 1.6em;
+    }
+
+    .line-label.nsl {
+        background: #e1251b;
+    }
+
+    .line-label.ewl {
+        background: #00953b;
+    }
+
+    .line-label.ccl {
+        background: #ff9e18;
+    }
+
+    .line-label.dtl {
+        background: #0055b8;
+    }
+
+    .line-label.nel {
+        background: #9e28b5;
+    }
+
+    .line-label.tel {
+        background: #9d5918;
+    }
+
+    .line-label.lrt {
+        background: #718472;
     }
 </style>
 
@@ -198,7 +219,7 @@
                                     </a>
                                 </li>
                                 <li class="breadcrumb-item">
-                                    <a href="abs.html"><i class="fa-solid fa-magnifying-glass"></i>
+                                    <a href="menu.html"><i class="fa-solid fa-bars"></i>
                                     </a>
                                 </li>
                             </ol>
@@ -227,42 +248,42 @@
 
     <section class="tsu">
         <div class="container container-xxl container-mobile container-mobile-header">
-        <li class="custom-list-item">
-            <span class="line-label">NSL</span>
-            <span class="line-name">North South Line</span>
-            <span class="status-icon">&#10003;</span>
-        </li>
+            <li class="custom-list-item">
+                <span class="line-label nsl">NSL</span>
+                <span class="line-name">North South Line</span>
+                <span class="status-icon">&#10003;</span>
+            </li>
 
-        <li class="custom-list-item">
-            <span class="line-label">EWL</span>
-            <span class="line-name">East West Line</span>
-            <span class="status-icon">&#10003;</span>
-        </li>
-        <li class="custom-list-item">
-            <span class="line-label">CCL</span>
-            <span class="line-name">Circle Line</span>
-            <span class="status-icon">&#10003;</span>
-        </li>
-        <li class="custom-list-item">
-            <span class="line-label">DTL</span>
-            <span class="line-name">Downtown Line</span>
-            <span class="status-icon">&#10003;</span>
-        </li>
-        <li class="custom-list-item">
-            <span class="line-label">TEL</span>
-            <span class="line-name">Thomson-East Coast Line</span>
-            <span class="status-icon">&#10003;</span>
-        </li>
-        <li class="custom-list-item">
-            <span class="line-label">NEL</span>
-            <span class="line-name">North East Line</span> 
-            <span class="status-icon">&#10003;</span>
-        </li>
-        <li class="custom-list-item">
-            <span class="line-label">LRT</span>
-            <span class="line-name">Light Rail Transit</span>
-            <span class="status-icon">&#10003;</span>
-        </li>
+            <li class="custom-list-item">
+                <span class="line-label ewl">EWL</span>
+                <span class="line-name">East West Line</span>
+                <span class="status-icon">&#10003;</span>
+            </li>
+            <li class="custom-list-item">
+                <span class="line-label ccl">CCL</span>
+                <span class="line-name">Circle Line</span>
+                <span class="status-icon">&#10003;</span>
+            </li>
+            <li class="custom-list-item">
+                <span class="line-label dtl">DTL</span>
+                <span class="line-name">Downtown Line</span>
+                <span class="status-icon">&#10003;</span>
+            </li>
+            <li class="custom-list-item">
+                <span class="line-label tel">TEL</span>
+                <span class="line-name">Thomson-East Coast Line</span>
+                <span class="status-icon">&#10003;</span>
+            </li>
+            <li class="custom-list-item">
+                <span class="line-label nel">NEL</span>
+                <span class="line-name">North East Line</span>
+                <span class="status-icon">&#10003;</span>
+            </li>
+            <li class="custom-list-item">
+                <span class="line-label lrt">LRT</span>
+                <span class="line-name">Light Rail Transit</span>
+                <span class="status-icon">&#10003;</span>
+            </li>
         </div>
     </section>
 
