--- a/buszy/tsa.html
+++ b/buszy/tsa.html
@@ -41,14 +41,21 @@
     .custom-list-item {
         display: flex;
         align-items: center;
-        background: #f1f1f1;
+        background: #fff;
         border-radius: 40px;
         padding: 18px 32px;
         width: 100%;
         margin: 24px 0;
         box-sizing: border-box;
         gap: 18px;
-        font-family: 'Segoe UI', Arial, sans-serif;
+        box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.04);
+    }
+
+    body.dark-mode .custom-list-item {
+        background-color: #2e2e2e;
+        color: #fff !important;
+        border: 1px solid #2b2b2b33;
+        box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.233), 0 4px 12px rgba(0, 0, 0, 0.1);
     }
 
     .line-label {
@@ -251,38 +258,55 @@
             <li class="custom-list-item">
                 <span class="line-label nsl">NSL</span>
                 <span class="line-name">North South Line</span>
-                <span class="status-icon">&#10003;</span>
+                <span class="status-icon"><i class="fa-solid fa-check"></i></span>
             </li>
-
+            <hr>
             <li class="custom-list-item">
                 <span class="line-label ewl">EWL</span>
                 <span class="line-name">East West Line</span>
-                <span class="status-icon">&#10003;</span>
+                <span class="status-icon"><i class="fa-solid fa-check"></i></span>
             </li>
+            <hr>
             <li class="custom-list-item">
                 <span class="line-label ccl">CCL</span>
                 <span class="line-name">Circle Line</span>
-                <span class="status-icon">&#10003;</span>
+                <span class="status-icon"><i class="fa-solid fa-check"></i></span>
             </li>
+            <hr>
             <li class="custom-list-item">
                 <span class="line-label dtl">DTL</span>
                 <span class="line-name">Downtown Line</span>
-                <span class="status-icon">&#10003;</span>
+                <span class="status-icon"><i class="fa-solid fa-check"></i></span>
             </li>
+            <hr>
             <li class="custom-list-item">
                 <span class="line-label tel">TEL</span>
                 <span class="line-name">Thomson-East Coast Line</span>
-                <span class="status-icon">&#10003;</span>
+                <span class="status-icon"><i class="fa-solid fa-check"></i></span>
             </li>
+            <hr>
             <li class="custom-list-item">
                 <span class="line-label nel">NEL</span>
                 <span class="line-name">North East Line</span>
-                <span class="status-icon">&#10003;</span>
+                <span class="status-icon"><i class="fa-solid fa-check"></i></span>
             </li>
+            <hr>
             <li class="custom-list-item">
-                <span class="line-label lrt">LRT</span>
-                <span class="line-name">Light Rail Transit</span>
-                <span class="status-icon">&#10003;</span>
+                <span class="line-label lrt">BP</span>
+                <span class="line-name">Bukit Panjang LRT</span>
+                <span class="status-icon"><i class="fa-solid fa-check"></i></span>
+            </li>
+            <hr>
+            <li class="custom-list-item">
+                <span class="line-label lrt">SK</span>
+                <span class="line-name">Sengkang LRT</span>
+                <span class="status-icon"><i class="fa-solid fa-check"></i></span>
+            </li>
+            <hr>
+            <li class="custom-list-item">
+                <span class="line-label lrt">PG</span>
+                <span class="line-name">Punggol LRT</span>
+                <span class="status-icon"><i class="fa-solid fa-check"></i></span>
             </li>
         </div>
     </section>
