--- a/buszy/art.html
+++ b/buszy/art.html
@@ -225,7 +225,7 @@
     @media (min-width: 1200px) {
         .col-xl-3 {
             flex: 0 0 auto;
-            width: 30%;
+            width: 33%;
         }
     }
 
@@ -325,7 +325,7 @@
             <!-- Navigation Links -->
             <ul class="navbar-nav" id="navbarNav">
                 <li class="nav-item">
-                    <a href="pinned.html" class="nav-link">
+                    <a href="../buszy.html" class="nav-link">
                         <i class="fa-sharp fa-solid fa-thumbtack-angle"></i>
                         <span>Pinned</span>
                     </a>
@@ -468,6 +468,7 @@
             </div>
         </div>
     </section>
+
 
     <script type="text/javascript" id="cookiebanner" src="../js/cookies-banner.js" data-position="bottom"
         data-bg="#f2f3e5" data-fg="#000" data-font-family="Onest, sans-serif" data-zindex="12345111111"
