--- a/buszy.html
+++ b/buszy.html
@@ -39,7 +39,7 @@
 <style>
     #cv-bat {
         background-image: url("img/bg-img/hero-buszy.png");
-        height: 35vh;
+        height: 50vh;
     }
 
     .footer {
@@ -104,6 +104,11 @@
     }
 
     @media (max-width: 545px) {
+        #cv-bat {
+            background-image: url("img/bg-img/hero-buszy.png");
+            height: 35vh;
+        }
+
         .bus-stop-info {
             flex-direction: column;
             align-items: flex-start;
