--- a/buszy/menu.html
+++ b/buszy/menu.html
@@ -260,7 +260,7 @@
             <hr>
 
             <div style="text-align: center; color: gray; font-size: 14px; margin-top: 1em; margin-bottom: 2em;">
-                Version 3.0.10-DEV
+                Version 3.0.10
             </div>
     </section>
 
