--- a/buszy/settings.html
+++ b/buszy/settings.html
@@ -15,6 +15,7 @@
     <link rel="manifest" href="../manifest.json">
 
     <link rel="icon" href="../img/core-img/favicon.png">
+    <meta name="theme-color" content="#007bff">
 
     <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v7.0.0/css/all.css" />
 
@@ -36,7 +37,6 @@
 </head>
 
 <style>
- 
     #cv-bat-subp {
         height: 10vh;
     }
