--- a/buszy/tsa.html
+++ b/buszy/tsa.html
@@ -143,7 +143,7 @@
             <!-- Navigation Links -->
             <ul class="navbar-nav" id="navbarNav">
                 <li class="nav-item">
-                    <a href="pinned.html" class="nav-link">
+                    <a href="../buszy.html" class="nav-link">
                         <i class="fa-sharp fa-solid fa-thumbtack-angle"></i>
                         <span>Pinned</span>
                     </a>
