--- a/buszy/tsa.html
+++ b/buszy/tsa.html
@@ -59,11 +59,11 @@
         background: #ff3b3b;
         color: #fff;
         font-weight: bold;
-        border-radius: 15px;
+        border-radius: 0.6em / 1.2em;
         padding: 5px 10px;
         font-size: 15px;
         letter-spacing: 1px;
-        margin-right: 8px;
+        margin-right: 0px;
         border: 2px solid #fff;
     }
 
