--- a/buszy/tsa.html
+++ b/buszy/tsa.html
@@ -59,7 +59,7 @@
         background: #ff3b3b;
         color: #fff;
         font-weight: bold;
-        border-radius: 0.6em / 1.2em;
+        border-radius: 13.6px / 19.2px;
         padding: 5px 10px;
         font-size: 15px;
         letter-spacing: 1px;
