--- a/buszy/tsa.html
+++ b/buszy/tsa.html
@@ -46,6 +46,13 @@
         box-sizing: border-box;
         gap: 12px;
         box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.04);
+        transition-duration: 800ms;
+    }
+
+    .custom-list-item:hover {
+        background-color: #d8e6f3;
+        transform: translateY(-2px);
+        box-shadow: 0 8px 20px rgba(0, 0, 0, 0.15);
     }
 
     body.dark-mode .custom-list-item {
@@ -53,6 +60,12 @@
         color: #fff !important;
         border: 1px solid #2b2b2b33;
         box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.233), 0 4px 12px rgba(0, 0, 0, 0.1);
+    }
+
+    body.dark-mode .custom-list-item:hover {
+        background-color: #334250;
+        transform: translateY(-2px);
+        box-shadow: 0 8px 20px rgba(0, 0, 0, 0.15);
     }
 
     .line-label {
