--- a/delays-tracker.html
+++ b/delays-tracker.html
@@ -153,20 +153,28 @@
         text-decoration: underline;
         font-weight: bold;
     }
+
+    .tsu {
+        padding: 24px 16px 95px 16px;
+    }
 </style>
 
 <body>
     <!-- Fixed Breadcrumb at very top (mobile/tablet only) -->
-    <div class="breadcrumb-fixed-placeholder">
+    <!-- <div class="breadcrumb-fixed-placeholder">
         <nav aria-label="breadcrumb" style="margin-bottom:0;">
             <ol class="breadcrumb breadcrumb-fixed" id="floating-breadcrumb">
                 <li class="breadcrumb-item">
                     <a href="nbs.html"><i class="fa-solid fa-home"></i>
                     </a>
                 </li>
+                <li class="breadcrumb-item">
+                    <a href="abs.html"><i class="fa-solid fa-bars"></i>
+                    </a>
+                </li>
             </ol>
         </nav>
-    </div>
+    </div> -->
 
     <!-- Navigation Bar -->
     <nav class="navbar-container">
@@ -248,7 +256,7 @@
     <!------------------------------------------------------------------------ Start of Sections ------------------------------------------------------------------------>
 
     <!-- Title/Breadcrumbs -->
-    <section class="about-me-sum clearfix">
+    <!-- <section class="about-me-sum clearfix">
         <div class="wbnrfz_eicw">
             <div class="page-header-section">
                 <div class="container container-xxl container-mobile container-mobile-header">
@@ -285,7 +293,7 @@
                 <hr>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <section class="tsu">
         <div class="container container-xxl container-mobile container-mobile-header">
