--- a/delays-tracker.html
+++ b/delays-tracker.html
@@ -12,14 +12,14 @@
     <meta content="" name="keywords">
     <meta property="og:image" content="https://i.imgur.com/i8n9KYs.png" />
 
-    <link rel="icon" href="../img/core-img/favicon.png">
+    <link rel="icon" href="img/core-img/favicon.png">
 
     <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v7.0.0/css/all.css" />
 
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="delays-tracker/css/style-tdt.css">
-    <link rel="stylesheet" href="../css/style-breakpoints.css">
-    <link rel="stylesheet" href="../css/dark-mode.css">
+    <link rel="stylesheet" href="css/style-breakpoints.css">
+    <link rel="stylesheet" href="css/dark-mode.css">
 
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -155,7 +155,13 @@
     }
 
     .tsu {
-        padding: 24px 16px 95px 16px;
+        padding: 7em 1em 7em 1em;
+    }
+
+    @media (max-width: 994px) {
+        .tsu {
+            padding: 3em 1em 7em 1em;
+        }
     }
 </style>
 
