--- a/delays-tracker/menu.html
+++ b/delays-tracker/menu.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v7.0.0/css/all.css" />
 
     <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="css/style-buszy.css">
+    <link rel="stylesheet" href="css/style-tdt.css">
     <link rel="stylesheet" href="../css/style-breakpoints.css">
     <link rel="stylesheet" href="../css/dark-mode.css">
 
@@ -92,12 +92,11 @@
         <nav aria-label="breadcrumb" style="margin-bottom:0;">
             <ol class="breadcrumb breadcrumb-fixed" id="floating-breadcrumb">
                 <li class="breadcrumb-item">
-                    <a href="../buszy.html">
-                        <i class="fa-solid fa-house"></i>
+                    <a href="nbs.html"><i class="fa-solid fa-home"></i>
                     </a>
                 </li>
                 <li class="breadcrumb-item">
-                    <a href="menu.html"><i class="fa-solid fa-bars"></i>
+                    <a href="abs.html"><i class="fa-solid fa-bars"></i>
                     </a>
                 </li>
             </ol>
@@ -108,29 +107,29 @@
     <nav class="navbar-container">
         <div class="navbar">
             <!-- Logo -->
-            <a href="../buszy.html"><img src="../img/core-img/logo.png" alt="logo" class="logo" /></a>
+            <a href="delays-tracker.html"><img src="../img/core-img/logo.png" alt="logo" class="logo" /></a>
 
             <!-- Navigation Links -->
             <ul class="navbar-nav" id="navbarNav">
                 <li class="nav-item">
-                    <a href="../buszy.html" class="nav-link">
-                        <i class="fa-sharp fa-solid fa-thumbtack-angle"></i>
-                        <span>Pinned</span>
+                    <a href="../main.html" class="nav-link">
+                        <i class="fa-sharp fa-solid fa-home"></i>
+                        <span>Home</span>
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="nbs.html" class="nav-link">
+                    <a href="history.html" class="nav-link">
                         <i class="fa-solid fa-location-dot"></i>
-                        <span>Nearby</span>
+                        <span>History</span>
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="abs.html" class="nav-link">
-                        <i class="fa-solid fa-magnifying-glass"></i>
-                        <span>Search</span>
+                    <a href="statistics.html" class="nav-link">
+                        <i class="fa-solid fa-chart-bar"></i>
+                        <span>Statistics</span>
                     </a>
                 </li>
-                <li class="nav-item ">
+                <li class="nav-item">
                     <a href="menu.html" class="nav-link active">
                         <i class="fa-solid fa-bars"></i>
                         <span>Menu</span>
@@ -145,27 +144,27 @@
     <nav class="mobile-bottom-nav">
         <ul>
             <li>
-                <a href="../buszy.html">
+                <a href="delays-tracker.html">
                     <span class="icon">
-                        <i class="fa-sharp fa-solid fa-thumbtack-angle"></i>
+                        <i class="fa-sharp fa-solid fa-home"></i>
                     </span>
-                    <span class="label">Pinned</span>
+                    <span class="label">Home</span>
                 </a>
             </li>
             <li>
-                <a href="nbs.html">
+                <a href="history.html">
                     <span class="icon">
-                        <i class="fa-solid fa-location-dot"></i>
+                        <i class="fa-solid fa-clock-rotate-left"></i>
                     </span>
-                    <span class="label">Nearby</span>
+                    <span class="label">History</span>
                 </a>
             </li>
             <li>
-                <a href="abs.html">
+                <a href="statistics.html">
                     <span class="icon">
-                        <i class="fa-solid fa-magnifying-glass"></i>
+                        <i class="fa-solid fa-chart-bar"></i>
                     </span>
-                    <span class="label">Search</span>
+                    <span class="label">Statistics</span>
                 </a>
             </li>
             <li class="active">
@@ -227,7 +226,7 @@
                 <a href="ann.html" class="list-group-item list-group-item-action flex-column align-items-start">
                     <div class="d-flex">
                         <div>
-                            <h5 class="lg-menu"><i class="fa-solid fa-bullhorn"></i> Announcements</h5>
+                            <h5 class="lg-menu"><i class="fa-solid fa-bullhorn"></i> Our Networks</h5>
                         </div>
                     </div>
                 </a>
@@ -235,18 +234,18 @@
                 <a href="tsa.html" class="list-group-item list-group-item-action flex-column align-items-start">
                     <div class="d-flex">
                         <div>
-                            <h5 class="lg-menu"><i class="fa-solid fa-train"></i> Train Service Updates (BETA)</h5>
+                            <h5 class="lg-menu"><i class="fa-solid fa-train"></i> System Map</h5>
                         </div>
                     </div>
                 </a>
 
-                <a href="settings.html" class="list-group-item list-group-item-action flex-column align-items-start">
+                <!-- <a href="settings.html" class="list-group-item list-group-item-action flex-column align-items-start">
                     <div class="d-flex">
                         <div>
                             <h5 class="lg-menu"><i class="fa-solid fa-gear"></i> Settings</h5>
                         </div>
                     </div>
-                </a>
+                </a> -->
 
                 <a href="" class="list-group-item list-group-item-action flex-column align-items-start"
                     id="dark-mode-toggle-desktop">
@@ -271,7 +270,7 @@
         </script>
 
 
-    <script src="buszy-subp.js"></script>
+    <script src="tdt-subp.js"></script>
 
     <script src="../js/jquery.min.js"></script>
 
