--- a/delays-tracker/history.html
+++ b/delays-tracker/history.html
@@ -16,11 +16,10 @@
 
     <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v7.0.0/css/all.css" />
 
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="delays-tracker/css/style-tdt.css">
-    <link rel="stylesheet" href="css/style-breakpoints.css">
-    <link rel="stylesheet" href="css/dark-mode.css">
-
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="css/style-tdt.css">
+    <link rel="stylesheet" href="../css/style-breakpoints.css">
+    <link rel="stylesheet" href="../css/dark-mode.css">
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-WN76281P3Q"></script>
@@ -138,6 +137,159 @@
         animation: pulse-animation 2s infinite;
     }
 
+
+
+    .disruption-card {
+        background: #fff;
+        color: #000;
+        border-radius: 25px;
+        padding: 20px;
+        margin: 20px 0;
+        box-shadow: 0 2px 8px #0002;
+        position: relative;
+        transition-duration: 800ms;
+    }
+
+    .card-header {
+        display: flex;
+        align-items: center;
+        gap: 10px;
+    }
+
+    .icon {
+        color: #e74c3c;
+    }
+
+    .type {
+        font-weight: bold;
+        color: #e74c3c;
+    }
+
+    .status.resolved {
+        color: #27ae60;
+        margin-left: auto;
+    }
+
+    .status.active {
+        color: #e67e22;
+        margin-left: auto;
+    }
+
+    .card-title {
+        font-size: 1.2em;
+        margin: 10px 0;
+    }
+
+    .line-badge,
+    .line-label {
+        background: #ff3b3b;
+        color: #fff;
+        font-weight: bold;
+        border-radius: 13.6px / 19.2px;
+        padding: 5px 10px;
+        font-size: 15px;
+        letter-spacing: 1px;
+        margin-right: 10px;
+        border: 2px solid #fff;
+        display: inline-block;
+    }
+
+    .line-label.nsl,
+    .line-badge.nsl {
+        background: #e1251b;
+        color: #fff;
+    }
+
+    .line-label.ewl,
+    .line-badge.ewl {
+        background: #00953b;
+        color: #fff;
+    }
+
+    .line-label.ccl,
+    .line-badge.ccl {
+        background: #ff9e18;
+        color: #000;
+    }
+
+    .line-label.dtl,
+    .line-badge.dtl {
+        background: #0055b8;
+        color: #fff;
+    }
+
+    .line-label.nel,
+    .line-badge.nel {
+        background: #9e28b5;
+        color: #fff;
+    }
+
+    .line-label.tel,
+    .line-badge.tel {
+        background: #9d5918;
+        color: #fff;
+    }
+
+    .line-label.lrt,
+    .line-badge.lrt {
+        background: #718472;
+        color: #fff;
+    }
+
+    .route {
+        background: #2c3e50;
+        border-radius: 6px;
+        padding: 2px 8px;
+    }
+
+    .card-time {
+        color: #b2bec3;
+        margin: 10px 0;
+    }
+
+    .card-tag {
+        display: inline-block;
+        border: 1px dashed #e74c3c;
+        color: #e74c3c;
+        border-radius: 6px;
+        padding: 2px 10px;
+        font-size: 0.9em;
+        margin-top: 10px;
+        margin-right: 6px;
+        background: transparent;
+        transition: background 0.2s, color 0.2s, border-color 0.2s;
+    }
+
+    .card-tag.tag-delay {
+        border-color: #e74c3c;
+        color: #e74c3c;
+        background: #2a2323;
+    }
+
+    .card-tag.tag-train-fault {
+        border-color: #3b82f6;
+        color: #3b82f6;
+        background: #232b36;
+    }
+
+    .card-tag.tag-signalling {
+        border-color: #f59e42;
+        color: #f59e42;
+        background: #2b261f;
+    }
+
+    .card-tag.tag-maintenance {
+        border-color: #43b02a;
+        color: #43b02a;
+        background: #232b23;
+    }
+
+    .card-tag.tag-weather {
+        border-color: #00bcd4;
+        color: #00bcd4;
+        background: #223036;
+    }
+
     @keyframes pulse-animation {
         0% {
             box-shadow: 0 0 0 0px rgba(148, 148, 148, 0.2);
@@ -154,20 +306,31 @@
         font-weight: bold;
     }
 
-    .tsu {
-        padding: 7em 1em 7em 1em;
+    body.dark-mode .disruption-card {
+        background: #2e2e2e;
+        color: #fff;
+        border-radius: 25px;
+        padding: 20px;
+        margin: 20px 0;
+        border: 1px solid #2b2b2b33;
+        box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.233), 0 4px 12px rgba(0, 0, 0, 0.1);
+        position: relative;
     }
 
+    /* .tsu {
+        padding: 7em 1em 7em 1em;
+    } */
+
     @media (max-width: 994px) {
-        .tsu {
+        /* .tsu {
             padding: 3em 1em 7em 1em;
-        }
+        } */
     }
 </style>
 
 <body>
     <!-- Fixed Breadcrumb at very top (mobile/tablet only) -->
-    <!-- <div class="breadcrumb-fixed-placeholder">
+    <div class="breadcrumb-fixed-placeholder">
         <nav aria-label="breadcrumb" style="margin-bottom:0;">
             <ol class="breadcrumb breadcrumb-fixed" id="floating-breadcrumb">
                 <li class="breadcrumb-item">
@@ -180,7 +343,7 @@
                 </li>
             </ol>
         </nav>
-    </div> -->
+    </div>
 
     <!-- Navigation Bar -->
     <nav class="navbar-container">
@@ -191,25 +354,25 @@
             <!-- Navigation Links -->
             <ul class="navbar-nav" id="navbarNav">
                 <li class="nav-item">
-                    <a href="../main.html" class="nav-link active">
+                    <a href="../delays-tracker.html" class="nav-link">
                         <i class="fa-sharp fa-solid fa-home"></i>
                         <span>Home</span>
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="delays-tracker/history.html" class="nav-link">
+                    <a href="history.html" class="nav-link active">
                         <i class="fa-solid fa-location-dot"></i>
                         <span>History</span>
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="delays-tracker/statistics.html" class="nav-link">
+                    <a href="statistics.html" class="nav-link">
                         <i class="fa-solid fa-chart-bar"></i>
                         <span>Statistics</span>
                     </a>
                 </li>
                 <li class="nav-item ">
-                    <a href="delays-tracker/menu.html" class="nav-link">
+                    <a href="menu.html" class="nav-link">
                         <i class="fa-solid fa-bars"></i>
                         <span>Menu</span>
                     </a>
@@ -222,15 +385,15 @@
     <!-- Mobile Bottom Navigation Bar -->
     <nav class="mobile-bottom-nav">
         <ul>
-            <li class="active">
-                <a href="delays-tracker.html">
+            <li>
+                <a href="../delays-tracker.html">
                     <span class="icon">
                         <i class="fa-sharp fa-solid fa-home"></i>
                     </span>
                     <span class="label">Home</span>
                 </a>
             </li>
-            <li>
+            <li class="active">
                 <a href="history.html">
                     <span class="icon">
                         <i class="fa-solid fa-clock-rotate-left"></i>
@@ -262,7 +425,7 @@
     <!------------------------------------------------------------------------ Start of Sections ------------------------------------------------------------------------>
 
     <!-- Title/Breadcrumbs -->
-    <!-- <section class="about-me-sum clearfix">
+    <section class="about-me-sum clearfix">
         <div class="wbnrfz_eicw">
             <div class="page-header-section">
                 <div class="container container-xxl container-mobile container-mobile-header">
@@ -283,15 +446,8 @@
                             <div
                                 style="display: flex; justify-content: space-between; align-items: center; flex-wrap: wrap;">
                                 <div>
-                                    <h1 class="page-title" id="filter-title">Train Delays Tracker</h1>
+                                    <h1 class="page-title" id="filter-title">History</h1>
                                 </div>
-                                <div style="position: relative; max-width: 400px; margin-top: 5px; display: none;">
-                                    <i class="fa-solid fa-search"
-                                        style="position: absolute; left: 12px; top: 50%; transform: translateY(-50%); color: #cccccc; z-index: 1;"></i>
-                                    <input type="text" id="bus-stop-search" class="form-control"
-                                        placeholder=" Search Bus Stop Code" style="padding-left: 35px; width: 100%;">
-                                </div>
-
                             </div>
                         </div>
                     </div>
@@ -299,68 +455,18 @@
                 <hr>
             </div>
         </div>
-    </section> -->
+    </section>
 
-    <section class="tsu">
+    <section class="hist">
         <div class="container container-xxl container-mobile container-mobile-header">
 
-            <h2>Line Status</h2>
-            <div class='alert-last-updated' style='margin-top:12px;font-size:0.98em;color:#888;'></div>
+            <div id="history-controls">
+                <button id="prev-month">←</button>
+                <span id="month-label"></span>
+                <button id="next-month">→</button>
+            </div>
+            <div id="disruption-cards"></div>
 
-            <li class="custom-list-item">
-                <span class="line-label nsl">NSL</span>
-                <span class="line-name">North-South Line</span>
-                <span class="status-icon pulse"><i class="fa-solid fa-check"></i></span>
-            </li>
-            <hr>
-            <li class="custom-list-item">
-                <span class="line-label ewl">EWL</span>
-                <span class="line-name">East-West Line</span>
-                <span class="status-icon pulse"><i class="fa-solid fa-check"></i></span>
-            </li>
-            <hr>
-            <li class="custom-list-item">
-                <span class="line-label nel">NEL</span>
-                <span class="line-name">North East Line</span>
-                <span class="status-icon pulse"><i class="fa-solid fa-check"></i></span>
-            </li>
-            <hr>
-            <li class="custom-list-item">
-                <span class="line-label ccl">CCL</span>
-                <span class="line-name">Circle Line</span>
-                <span class="status-icon pulse"><i class="fa-solid fa-check"></i></span>
-            </li>
-            <hr>
-            <li class="custom-list-item">
-                <span class="line-label dtl">DTL</span>
-                <span class="line-name">Downtown Line</span>
-                <span class="status-icon pulse"><i class="fa-solid fa-check"></i></span>
-            </li>
-            <hr>
-            <li class="custom-list-item">
-                <span class="line-label tel">TEL</span>
-                <span class="line-name">Thomson-East Coast Line</span>
-                <span class="status-icon pulse"><i class="fa-solid fa-check"></i></span>
-            </li>
-            <hr>
-            <li class="custom-list-item">
-                <span class="line-label lrt">BP</span>
-                <span class="line-name">Bukit Panjang LRT</span>
-                <span class="status-icon pulse"><i class="fa-solid fa-check"></i></span>
-            </li>
-            <hr>
-            <li class="custom-list-item">
-                <span class="line-label lrt">SK</span>
-                <span class="line-name">Sengkang LRT</span>
-                <span class="status-icon pulse"><i class="fa-solid fa-check"></i></span>
-            </li>
-            <hr>
-            <li class="custom-list-item">
-                <span class="line-label lrt">PG</span>
-                <span class="line-name">Punggol LRT</span>
-                <span class="status-icon pulse"><i class="fa-solid fa-check"></i></span>
-            </li>
-        </div>
     </section>
 
 
@@ -369,9 +475,9 @@
         data-message="This website uses cookies to provide necessary site functionality and to improve your experience. By using this website, you agree to our use of cookies.">
         </script>
 
-    <script src="delays-tracker/js/mob-navtabs.js"></script>
+    <script src="js/mob-navtabs.js"></script>
 
-    <script src="delays-tracker/tdt-subp.js"></script>
+    <script src="tdt-subp.js"></script>
 
     <script src="../js/jquery.min.js"></script>
 
@@ -389,7 +495,7 @@
 
     <script src="../js/utils.js"></script>
 
-    <script src="delays-tracker/js/tsa.js"></script>
+    <script src="js/hist.js"></script>
 
 </body>
 
