--- a/delays-tracker/history.html
+++ b/delays-tracker/history.html
@@ -1,15 +1,3 @@
-.status-minor {
-color: #f7b731;
-font-size: 1.3em;
-margin-right: 8px;
-vertical-align: middle;
-}
-.status-major {
-color: #e74c3c;
-font-size: 1.3em;
-margin-right: 8px;
-vertical-align: middle;
-}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -24,7 +12,7 @@ vertical-align: middle;
     <meta content="" name="keywords">
     <meta property="og:image" content="https://i.imgur.com/i8n9KYs.png" />
 
-    <link rel="icon" href="img/core-img/favicon.png">
+    <link rel="icon" href="../img/core-img/favicon.png">
 
     <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v7.0.0/css/all.css" />
 
@@ -169,8 +157,7 @@ vertical-align: middle;
         animation: pulse-animation 2s infinite;
     }
 
-
-
+    /*  */
     .disruption-card {
         background: #fff;
         color: #000;
@@ -207,6 +194,10 @@ vertical-align: middle;
         color: #e67e22;
         margin-left: auto;
         font-weight: bold;
+    }
+
+    .fa-circle.fa-beat {
+        padding-bottom: 0.2em;
     }
 
     .card-title {
@@ -271,9 +262,10 @@ vertical-align: middle;
     }
 
     .route {
-        background: #2c3e50;
+        background: #f8f8f8;
         border-radius: 6px;
         padding: 2px 8px;
+        border: 1px solid #ddd;
     }
 
     .card-time {
@@ -297,31 +289,26 @@ vertical-align: middle;
     .card-tag.tag-delay {
         border-color: #e74c3c;
         color: #e74c3c;
-        background: #2a2323;
     }
 
     .card-tag.tag-train-fault {
         border-color: #3b82f6;
         color: #3b82f6;
-        background: #232b36;
     }
 
     .card-tag.tag-signalling {
         border-color: #f59e42;
         color: #f59e42;
-        background: #2b261f;
     }
 
     .card-tag.tag-maintenance {
         border-color: #43b02a;
         color: #43b02a;
-        background: #232b23;
     }
 
     .card-tag.tag-weather {
         border-color: #00bcd4;
         color: #00bcd4;
-        background: #223036;
     }
 
     #prev-month,
@@ -342,6 +329,37 @@ vertical-align: middle;
         padding-left: 15px;
         padding-right: 15px;
         border-radius: 12px;
+    }
+
+    .card-details-multi {
+        display: flex;
+        gap: 12px;
+        flex-wrap: wrap;
+        margin-bottom: 8px;
+    }
+
+    .route-badge {
+        display: flex;
+        align-items: center;
+        border-radius: 12px;
+        padding: 2px 12px 2px 4px;
+        margin-right: 8px;
+        font-size: 1em;
+        gap: 8px;
+        min-width: 0;
+        box-shadow: 0 1px 4px #0001;
+    }
+
+    .route-badge .line-badge {
+        margin-right: 8px;
+        margin-bottom: 0;
+    }
+
+    .route-badge .route {
+        color: #fff;
+        font-weight: 500;
+        font-size: 1em;
+        margin-right: 2px;
     }
 
     @keyframes pulse-animation {
@@ -369,6 +387,12 @@ vertical-align: middle;
         border: 1px solid #2b2b2b33;
         box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.233), 0 4px 12px rgba(0, 0, 0, 0.1);
         position: relative;
+    }
+
+    body.dark-mode .route {
+        background: #383838;
+        border-radius: 6px;
+        padding: 2px 8px;
     }
 
     /* .tsu {
